# bevy-world-editor

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
assets/shaders/: dof.wgsl  godrays.wgsl  leaves.wgsl  leaves_prepass.wgsl  particles.wgsl  terrain.wgsl  water.wgsl
assets/textures/: MANIFEST.md
crates/wedcli/: Cargo.toml
crates/wedcli/src/: main.rs
crates/worldgen/: Cargo.toml
crates/worldgen/src/: creatures.rs  erosion.rs  export.rs  heightfield.rs  lakes.rs  lib.rs  maps.rs  noise.rs  path.rs  project.rs  rng.rs  scatter.rs  trails.rs  tree.rs
docs/: FORMAT.md  PERF.md
docs/specs/: 2026-07-19-forest-generator-design.md  2026-07-21-map-editor-research.md  2026-07-23-viewport-controls.md
src/: ambience.rs  atmospherics.rs  capture.rs  creature_mesh.rs  creature_tex.rs  creatures.rs  daycycle.rs  dof.rs  editor.rs  flycam.rs  foliage.rs  forest.rs  genrun.rs  godrays.rs  grass.rs  lodline.rs  main.rs  particles.rs  profile.rs  props.rs  rocks.rs  sky.rs  stats.rs  terrain_mat.rs  terrain_mesh.rs  texload.rs  trees_mesh.rs  ui.rs  water_mat.rs  weather.rs
tools/: fetch_textures.ps1
